updated wp-config.php.tmpl  add home & site url

--- a/wp-config.php.tmpl
+++ b/wp-config.php.tmpl
@@ -96,3 +96,5 @@ if ( ! defined( 'ABSPATH' ) ) {
 
 /** Sets up WordPress vars and included files. */
 require_once ABSPATH . 'wp-settings.php';
+define( 'WP_HOME', 'https://{{wp_domain}}' );
+define( 'WP_SITEURL', 'https://{{wp_domain}}' );
