--- a/virtualhost.conf.tmpl
+++ b/virtualhost.conf.tmpl
@@ -3,9 +3,9 @@
   servername  {{ wp_domain }}
   documentroot /var/www/html/{{ wp_domain }}
 
-  RewriteEngine On
-  RewriteCond %{HTTP:X-Forwarded-Proto} =http
-  RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
+# RewriteEngine On
+# RewriteCond %{HTTP:X-Forwarded-Proto} =http
+# RewriteRule .* https://%{HTTP:Host}%{REQUEST_URI} [L,R=permanent]
 
   <directory "/var/www/html/{{ wp_domain }}">
      allowoverride all
